<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_patio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="christopher_fontana.noassemblyrequiredcfontana.Patio"
    tools:showIn="@layout/activity_patio">

    <TextView
        android:text="@string/txtTitle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle5"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTools"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/txtTitle5"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:text="@string/txtLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTools"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtLevel"
        android:textStyle="normal|bold"
        android:textSize="15sp" />

    <TextView
        android:text="@string/txtSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLevel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtSquare"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtTape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSquare"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtTape"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtPhil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTape"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtPhil"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtMallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPhil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtMallet"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtDrill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMallet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtDrill"
        android:textSize="15sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtBit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDrill"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtBit"
        android:textStyle="normal|bold"
        android:textSize="15sp" />

    <TextView
        android:text="@string/txtLadder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtLadder"
        android:textStyle="normal|bold"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/patio"
        android:id="@+id/imageView4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
