<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_bicycle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="christopher_fontana.noassemblyrequiredcfontana.Bicycle"
    tools:showIn="@layout/activity_bicycle">

    <TextView
        android:text="@string/txtTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle3"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtTorxWrench"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAllenWrench"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/txtTorxWrench"
        android:textSize="15sp" />

    <TextView
        android:text="@string/txtAllenWrench"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/txtAllenWrench"
        android:textSize="16sp"
        android:layout_below="@+id/txtTools"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txtSocketWrench"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTorxWrench"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/txtSocketWrench"
        android:textSize="15sp" />

    <TextView
        android:text="@string/txtPedalWrench"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/txtPedalWrench"
        android:textSize="15sp"
        android:layout_below="@+id/txtSocketWrench"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txtTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/txtTools"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/txtTitle3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bicycle"
        android:layout_marginBottom="40dp"
        android:id="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtAllenWrench"
        android:layout_alignEnd="@+id/txtAllenWrench" />

</RelativeLayout>
