<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="christopher_fontana.noassemblyrequiredcfontana.Selection"
    tools:showIn="@layout/activity_selection">

    <TextView
        android:text="@string/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle2"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/btnBicycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:id="@+id/btnBicycle"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/btnDresser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDresser"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignBaseline="@+id/btnBicycle"
        android:layout_alignBottom="@+id/btnBicycle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp" />

    <Button
        android:text="@string/btnPatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPatio"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/btnBicycle"
        android:layout_toRightOf="@+id/btnBicycle"
        android:layout_toEndOf="@+id/btnBicycle"
        android:layout_marginTop="13dp" />
</RelativeLayout>
